--- a/ConvNeXT/Fine_tune_ConvNeXT_for_image_classification.ipynb
+++ b/ConvNeXT/Fine_tune_ConvNeXT_for_image_classification.ipynb
@@ -13,7 +13,6 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "819cc97f19614f18bb6fa919fae97233": {
@@ -3129,27 +3128,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3icaSKmaPEG0",
-        "outputId": "846d2fab-1182-4ca7-ecb6-14c315862179"
+        "id": "3icaSKmaPEG0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m510.5/510.5 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m116.3/116.3 kB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m194.1/194.1 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.8/134.8 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "! pip install -q transformers datasets\n",
         "! pip install -q kaggle"
@@ -3169,17 +3152,284 @@
     {
       "cell_type": "code",
       "source": [
-        "from datasets import load_dataset\n",
-        "\n",
-        "# we can load a custom dataset using the \"imagefolder\" feature\n",
-        "# details: https://huggingface.co/docs/datasets/image_process#imagefolder\n",
-        "# supports far more than just zip files\n",
-        "dataset = load_dataset(\"imagefolder\", data_files=\"/content/EuroSAT_RGB.zip\")"
+        "from google.colab import files\n",
+        "files.upload()"
       ],
       "metadata": {
-        "id": "yNthodWiPUgs"
+        "id": "yNthodWiPUgs",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 91
+        },
+        "outputId": "f51fbc2d-8466-41d6-8034-d0874b6a9bab"
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "     <input type=\"file\" id=\"files-7db1a5d2-f4cb-4ce5-8b8c-7afccb8a4fae\" name=\"files[]\" multiple disabled\n",
+              "        style=\"border:none\" />\n",
+              "     <output id=\"result-7db1a5d2-f4cb-4ce5-8b8c-7afccb8a4fae\">\n",
+              "      Upload widget is only available when the cell has been executed in the\n",
+              "      current browser session. Please rerun this cell to enable.\n",
+              "      </output>\n",
+              "      <script>// Copyright 2017 Google LLC\n",
+              "//\n",
+              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+              "// you may not use this file except in compliance with the License.\n",
+              "// You may obtain a copy of the License at\n",
+              "//\n",
+              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
+              "//\n",
+              "// Unless required by applicable law or agreed to in writing, software\n",
+              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+              "// See the License for the specific language governing permissions and\n",
+              "// limitations under the License.\n",
+              "\n",
+              "/**\n",
+              " * @fileoverview Helpers for google.colab Python module.\n",
+              " */\n",
+              "(function(scope) {\n",
+              "function span(text, styleAttributes = {}) {\n",
+              "  const element = document.createElement('span');\n",
+              "  element.textContent = text;\n",
+              "  for (const key of Object.keys(styleAttributes)) {\n",
+              "    element.style[key] = styleAttributes[key];\n",
+              "  }\n",
+              "  return element;\n",
+              "}\n",
+              "\n",
+              "// Max number of bytes which will be uploaded at a time.\n",
+              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
+              "\n",
+              "function _uploadFiles(inputId, outputId) {\n",
+              "  const steps = uploadFilesStep(inputId, outputId);\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  // Cache steps on the outputElement to make it available for the next call\n",
+              "  // to uploadFilesContinue from Python.\n",
+              "  outputElement.steps = steps;\n",
+              "\n",
+              "  return _uploadFilesContinue(outputId);\n",
+              "}\n",
+              "\n",
+              "// This is roughly an async generator (not supported in the browser yet),\n",
+              "// where there are multiple asynchronous steps and the Python side is going\n",
+              "// to poll for completion of each step.\n",
+              "// This uses a Promise to block the python side on completion of each step,\n",
+              "// then passes the result of the previous step as the input to the next step.\n",
+              "function _uploadFilesContinue(outputId) {\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  const steps = outputElement.steps;\n",
+              "\n",
+              "  const next = steps.next(outputElement.lastPromiseValue);\n",
+              "  return Promise.resolve(next.value.promise).then((value) => {\n",
+              "    // Cache the last promise value to make it available to the next\n",
+              "    // step of the generator.\n",
+              "    outputElement.lastPromiseValue = value;\n",
+              "    return next.value.response;\n",
+              "  });\n",
+              "}\n",
+              "\n",
+              "/**\n",
+              " * Generator function which is called between each async step of the upload\n",
+              " * process.\n",
+              " * @param {string} inputId Element ID of the input file picker element.\n",
+              " * @param {string} outputId Element ID of the output display.\n",
+              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
+              " */\n",
+              "function* uploadFilesStep(inputId, outputId) {\n",
+              "  const inputElement = document.getElementById(inputId);\n",
+              "  inputElement.disabled = false;\n",
+              "\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  outputElement.innerHTML = '';\n",
+              "\n",
+              "  const pickedPromise = new Promise((resolve) => {\n",
+              "    inputElement.addEventListener('change', (e) => {\n",
+              "      resolve(e.target.files);\n",
+              "    });\n",
+              "  });\n",
+              "\n",
+              "  const cancel = document.createElement('button');\n",
+              "  inputElement.parentElement.appendChild(cancel);\n",
+              "  cancel.textContent = 'Cancel upload';\n",
+              "  const cancelPromise = new Promise((resolve) => {\n",
+              "    cancel.onclick = () => {\n",
+              "      resolve(null);\n",
+              "    };\n",
+              "  });\n",
+              "\n",
+              "  // Wait for the user to pick the files.\n",
+              "  const files = yield {\n",
+              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
+              "    response: {\n",
+              "      action: 'starting',\n",
+              "    }\n",
+              "  };\n",
+              "\n",
+              "  cancel.remove();\n",
+              "\n",
+              "  // Disable the input element since further picks are not allowed.\n",
+              "  inputElement.disabled = true;\n",
+              "\n",
+              "  if (!files) {\n",
+              "    return {\n",
+              "      response: {\n",
+              "        action: 'complete',\n",
+              "      }\n",
+              "    };\n",
+              "  }\n",
+              "\n",
+              "  for (const file of files) {\n",
+              "    const li = document.createElement('li');\n",
+              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
+              "    li.append(span(\n",
+              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
+              "        `last modified: ${\n",
+              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
+              "                                    'n/a'} - `));\n",
+              "    const percent = span('0% done');\n",
+              "    li.appendChild(percent);\n",
+              "\n",
+              "    outputElement.appendChild(li);\n",
+              "\n",
+              "    const fileDataPromise = new Promise((resolve) => {\n",
+              "      const reader = new FileReader();\n",
+              "      reader.onload = (e) => {\n",
+              "        resolve(e.target.result);\n",
+              "      };\n",
+              "      reader.readAsArrayBuffer(file);\n",
+              "    });\n",
+              "    // Wait for the data to be ready.\n",
+              "    let fileData = yield {\n",
+              "      promise: fileDataPromise,\n",
+              "      response: {\n",
+              "        action: 'continue',\n",
+              "      }\n",
+              "    };\n",
+              "\n",
+              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
+              "    let position = 0;\n",
+              "    do {\n",
+              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
+              "      const chunk = new Uint8Array(fileData, position, length);\n",
+              "      position += length;\n",
+              "\n",
+              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
+              "      yield {\n",
+              "        response: {\n",
+              "          action: 'append',\n",
+              "          file: file.name,\n",
+              "          data: base64,\n",
+              "        },\n",
+              "      };\n",
+              "\n",
+              "      let percentDone = fileData.byteLength === 0 ?\n",
+              "          100 :\n",
+              "          Math.round((position / fileData.byteLength) * 100);\n",
+              "      percent.textContent = `${percentDone}% done`;\n",
+              "\n",
+              "    } while (position < fileData.byteLength);\n",
+              "  }\n",
+              "\n",
+              "  // All done.\n",
+              "  yield {\n",
+              "    response: {\n",
+              "      action: 'complete',\n",
+              "    }\n",
+              "  };\n",
+              "}\n",
+              "\n",
+              "scope.google = scope.google || {};\n",
+              "scope.google.colab = scope.google.colab || {};\n",
+              "scope.google.colab._files = {\n",
+              "  _uploadFiles,\n",
+              "  _uploadFilesContinue,\n",
+              "};\n",
+              "})(self);\n",
+              "</script> "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving kaggle.json to kaggle.json\n",
+            "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!rm -r ~/.kaggle\n",
+        "!mkdir ~/.kaggle\n",
+        "!mv ./kaggle.json ~/.kaggle/\n",
+        "!chmod 600 ~/.kaggle/kaggle.json"
+      ],
+      "metadata": {
+        "id": "j_kylCDvTTrS",
+        "outputId": "900396f7-1db1-40a8-f9b4-9f7cf3937c02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ref                                                     title                                      size  lastUpdated          downloadCount  voteCount  usabilityRating  \n",
+            "------------------------------------------------------  ----------------------------------------  -----  -------------------  -------------  ---------  ---------------  \n",
+            "asinow/car-price-dataset                                Car Price Dataset                         135KB  2025-01-26 19:53:28          18168        297  1.0              \n",
+            "ak0212/indian-bike-sales-dataset                        Indian Bike Sales Dataset                 266KB  2025-02-21 12:20:27           1085         24  1.0              \n",
+            "samayashar/fraud-detection-transactions-dataset         Fraud Detection Transactions Dataset        2MB  2025-02-21 18:06:23           1182         24  1.0              \n",
+            "abdulmalik1518/mobiles-dataset-2025                     Mobiles Dataset (2025)                     20KB  2025-02-18 06:50:24           2581         51  1.0              \n",
+            "mahmoudelhemaly/students-grading-dataset                Student Performance & Behavior Dataset    508KB  2025-02-17 17:38:46           2301         42  1.0              \n",
+            "vinothkannaece/sales-dataset                            sales dataset                              27KB  2025-02-18 05:13:42           3034         53  1.0              \n",
+            "feeldidaxie/king-county-house-sales-usa                 King County House Sales (USA)             757KB  2025-02-23 09:22:24            813         22  1.0              \n",
+            "samikshadalvi/100-most-watched-anime-in-the-world       100 Most Watched Anime in the World         2KB  2025-02-16 17:38:26            655         23  1.0              \n",
+            "ankushpanday2/heart-attack-prediction-in-united-states  Heart Attack Prediction in United States   12MB  2025-02-20 16:14:03            969         27  1.0              \n",
+            "adilshamim8/education-and-career-success                Education & Career Success.               118KB  2025-02-03 05:24:20           4847         71  1.0              \n",
+            "adilshamim8/sleep-cycle-and-productivity                Sleep Cycle & Productivity                155KB  2025-02-07 05:44:59           2958         46  1.0              \n",
+            "adilshamim8/daily-food-and-nutrition-dataset            Daily Food & Nutrition Dataset            249KB  2025-02-05 06:25:32           1329         24  1.0              \n",
+            "asinow/laptop-price-dataset                             Laptop Price Dataset                      181KB  2025-02-01 04:20:16           4265         83  1.0              \n",
+            "mhassansaboor/uber-stocks-dataset-2025                  Uber Stocks Dataset 2025                   28KB  2025-02-06 11:24:01            785         26  1.0              \n",
+            "anandshaw2001/netflix-movies-and-tv-shows               Netflix Movies and TV Shows                 1MB  2025-01-03 10:33:01          22232        533  1.0              \n",
+            "adilshamim8/startup-growth-and-investment-data          Startup Growth & Investment Data          141KB  2025-02-02 07:27:03           1465         25  1.0              \n",
+            "ruchikakumbhar/zomato-dataset                           Zomato Dataset                              2KB  2025-01-21 03:59:39           5694         98  1.0              \n",
+            "akxiit/blinkit-sales-dataset                            Blinkit Sales Dataset                       1MB  2025-02-09 12:39:05           2591         36  0.9411765        \n",
+            "dansbecker/melbourne-housing-snapshot                   Melbourne Housing Snapshot                451KB  2018-06-05 12:52:24         172155       1577  0.7058824        \n",
+            "adilshamim8/student-performance-and-learning-style      Student Performance & Learning Style      148KB  2025-02-12 06:12:07           1190         24  1.0              \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#!kaggle datasets download -d sergeynesteruk/packed-fruits-and-vegetables-recognition-benchmark\n",
+        "\n",
+        "#import zipfile\n",
+        "zip_ref = zipfile.ZipFile('packed-fruits-and-vegetables-recognition-benchmark.zip', 'r')\n",
+        "zip_ref.extractall('/content')\n",
+        "zip_ref.close()"
+      ],
+      "metadata": {
+        "id": "l1RaWxOmUdin"
+      },
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -3198,23 +3448,24 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 141
         },
         "id": "R5uIcoMYPya1",
-        "outputId": "1861cf91-3e1c-46e7-c3e9-e4be98050b1b"
+        "outputId": "91f06a5f-48d3-4cfb-f382-6fee63483fce"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'image': Image(decode=True, id=None),\n",
-              " 'label': ClassLabel(names=['AnnualCrop', 'Forest', 'HerbaceousVegetation', 'Highway', 'Industrial', 'Pasture', 'PermanentCrop', 'Residential', 'River', 'SeaLake'], id=None)}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'dataset' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-f81f0cfc664c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"train\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+          ]
         }
       ]
     },
